WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214858
Extension is sized incorrectly, content is cut off.
https://bugs.webkit.org/show_bug.cgi?id=214858
Summary
Extension is sized incorrectly, content is cut off.
alan
Reported
2020-07-27 16:38:17 PDT
<
rdar://problem/64135680
>
Attachments
Patch
(6.95 KB, patch)
2020-07-27 16:58 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-07-27 16:58:11 PDT
Created
attachment 405331
[details]
Patch
EWS
Comment 2
2020-07-27 17:30:21 PDT
Committed
r264960
: <
https://trac.webkit.org/changeset/264960
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405331
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug